Fixing spacing between tickets title and tickets table

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -130,7 +130,7 @@ a.hilite:hover {
 }
 
 .tickets-title {
-  margin: 50px 0 200px;
+  margin: 200px 0 25px;
   position: relative;
 
   .fuobe2 {
